--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SakuraLauncher</title>
     <link rel="stylesheet" href="front/style.css">
+    <link rel="stylesheet" href="front/pshkvButtonStyle.css">
     <link rel="icon" href="public/favIcon.png" type="image/x-icon">
     <script src="back/news.js"></script>
     <script src="back/header.js"></script>
@@ -110,7 +111,9 @@
             </div>
         </div>
     </div>
-
+    <a href="https://peshk0v.github.io/TG-PSHKV-LifeStyle/" class="pshkvlogo">
+        <img src="https://github.com/peshk0v/TG-PSHKV-LifeStyle/blob/main/pshkvLSLogo.jpg?raw=true" alt="PSHKV" width="36"> PSHKV
+    </a>
     <script>
         setDefaultPage();
     </script>
