--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             </div>
         </div>
     </div>
-    <a href="https://peshk0v.github.io/TG-PSHKV-LifeStyle/" class="pshkvlogo">
+    <a href="https://peshk0v.github.io/TG-PSHKV-LifeStyle/razrabotchik.html" class="pshkvlogo">
         <img src="https://github.com/peshk0v/TG-PSHKV-LifeStyle/blob/main/pshkvLSLogo.jpg?raw=true" alt="PSHKV" width="36"> PSHKV
     </a>
     <script>
