--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
             </div>
         </div>
     </div>
-    <a href="https://peshk0v.github.io/TG-PSHKV-LifeStyle/razrabotchik.html" class="pshkvlogo">
-        <img src="https://github.com/peshk0v/TG-PSHKV-LifeStyle/blob/main/pshkvLSLogo.jpg?raw=true" alt="PSHKV" width="36"> PSHKV
+    <a href="https://peshk0v.github.io/peshkv/" class="pshkvlogo">
+        <img src="https://github.com/peshk0v/peshkv/blob/main/src/index/avatar.png?raw=true" alt="PSHKV" width="36"> PSHKV
     </a>
     <script>
         setDefaultPage();
